# lib_posix_xsi_examples

./: CMakeLists.txt  README.md  generate-flags.sh
dirent/: CMakeLists.txt
fmtmsg/: CMakeLists.txt
ftw/: CMakeLists.txt
grp/: CMakeLists.txt
libgen/: CMakeLists.txt
math/: CMakeLists.txt
ndbm/: CMakeLists.txt
ndbm/open_close/: CMakeLists.txt  main.c
pwd/: CMakeLists.txt
search/: CMakeLists.txt
signal/: CMakeLists.txt
stdlib/: CMakeLists.txt
string/: CMakeLists.txt
strings/: CMakeLists.txt
sys/: CMakeLists.txt
sys/ipc/: CMakeLists.txt
sys/mman/: CMakeLists.txt
sys/msg/: CMakeLists.txt
sys/resource/: CMakeLists.txt
sys/shm/: CMakeLists.txt
sys/stat/: CMakeLists.txt
sys/time/: CMakeLists.txt
sys/uio/: CMakeLists.txt
syslog/: CMakeLists.txt
time/: CMakeLists.txt
unistd/: CMakeLists.txt
utmpx/: CMakeLists.txt
wchar/: CMakeLists.txt
